--- a/estilos.css
+++ b/estilos.css
@@ -3,3 +3,10 @@
         height: 100vh;
     }
 }
+
+.lista1{
+    background-color: azure;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+    font-style: normal;
+}
